<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tic Tac Toe</string>

<!--    https://apps.admob.com/v2/apps/1665875622/overview-->
    <string name="str_b">ca-app-pub-3165963943681013/9161222265</string>
    <string name="str_f">ca-app-pub-3165963943681013/2607777428</string>

    <string name="OK">New Game</string>
    <string name="gameTittle">Tic Tac Toe Game</string>
    <string name="meWinner">Congratulations! You win :)</string>
    <string name="androidWinner">Computer wins.</string>
    <string name="tiedGame">It is a tie. Keep playing!</string>
    <string name="titleInstruction">Tic Tac Toe Instructions</string>
    <string name="instructionOne">You play as the X\'s and</string>
    <string name="instructionTwo">Computer is the O\'s.</string>
    <string name="instructionThree">Place your X\'s on the squares by clicking them.</string>
    <string name="instructionFour"> The first player to get three X\'s or O\'s in a row (horizontal,vertical, or diagonal) wins.</string>
    <string name="new_game">New Game</string>
    <string name="rate">Rate</string>
    <string name="more_games">More Games</string>
    <string name="computer">Computer</string>
    <string name="me">Me</string>
    <string name="restart">Restart</string>
    <string name="change_theme">Change theme</string>
</resources>
