<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popWindow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/themeBackgroundColor"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/titleInstruction"
        android:textColor="?attr/themeTextColor"
        android:textSize="@dimen/txt_large"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_medium"
        android:contentDescription="@string/app_name"
        android:src="@drawable/iv_help" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:gravity="start"
        android:text="@string/instructionOne"
        android:textColor="?attr/themeTextColor"
        android:textSize="@dimen/txt_medium" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/instructionTwo"
        android:textColor="?attr/themeTextColor"
        android:textSize="@dimen/txt_medium" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/instructionThree"
        android:textColor="?attr/themeTextColor"
        android:textSize="@dimen/txt_medium" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/instructionFour"
        android:textColor="?attr/themeTextColor"
        android:textSize="@dimen/txt_medium" />

</LinearLayout>
