<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/themeBackgroundColor">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/iv"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="?attr/themeTextColor"
        android:textSize="@dimen/txt_35"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv"
        android:layout_width="@dimen/w_120"
        android:layout_height="@dimen/w_120"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_primary"
            android:paddingStart="@dimen/padding_45"
            android:paddingEnd="@dimen/padding_45"
            android:paddingBottom="@dimen/padding_medium"
            android:text="@string/new_game"
            android:textAllCaps="false"
            android:textColor="?attr/themeTextColor"
            android:textSize="@dimen/txt_large"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btChangeTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/bt_primary"
            android:paddingStart="@dimen/padding_45"
            android:paddingEnd="@dimen/padding_45"
            android:text="@string/change_theme"
            android:textAllCaps="false"
            android:textColor="?attr/themeTextColor"
            android:textSize="@dimen/txt_large"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/bt_primary"
            android:paddingStart="@dimen/padding_45"
            android:paddingEnd="@dimen/padding_45"
            android:text="@string/rate"
            android:textAllCaps="false"
            android:textColor="?attr/themeTextColor"
            android:textSize="@dimen/txt_large"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/bt_primary"
            android:paddingStart="@dimen/padding_45"
            android:paddingEnd="@dimen/padding_45"
            android:text="@string/more_games"
            android:textAllCaps="false"
            android:textColor="?attr/themeTextColor"
            android:textSize="@dimen/txt_large"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
